--- a/index.html
+++ b/index.html
@@ -4,10 +4,225 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/main.css">
-  <title>Template Repo</title>
+  <link rel="stylesheet" href="./css/main.min.css">
+  <!-- <link rel="stylesheet" href="./css/main.css"> -->
+  <title>Desktop</title>
 </head>
 <body>
 
-</body>
-</html>
+  <header class="header">
+
+    <div class="container">
+
+      <div class="header-inner">
+
+        <a href="./index.html"><img src="./images/header-logo.svg" alt="site  logo" class="header-inner__logo"></a>
+
+        <nav class="header-inner__navbar nav">
+
+          <ul class="nav__list">
+            <li class="nav__item"><a href="./index.html" class="nav__link">HOME</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">ABOUT US</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Create your plan</a></li>
+          </ul>
+
+
+        </nav>
+
+
+      </div>
+
+    </div>
+
+  </header>
+
+  <main>
+
+    <section class="intro">
+      <div class="container">
+        <div class="intro-inner">
+          <div class="intro-info">
+            <h2 class="intro-info__title">Create plan</h2>
+            <p class="intro-info__text">Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week. For whatever brew method you use. For choice, for convenience, for quality.</p>
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+
+    <section class="how-it-works">
+      <div class="container">
+        <h2 class="visually-hidden">How it works</h2>
+        <div class="how-it-works__inner">
+          <div class="line">
+            <span class="line__circle"></span>
+            <span class="line__circle"></span>
+            <span class="line__circle"></span>
+          </div>
+          <ol class="steps">
+            <li class="steps__item">
+              <h3 class="steps__number">01</h3>
+              <h4 class="steps__title">Pick your <br> coffee</h4>
+              <p class="steps__text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </li>
+            <li class="steps__item">
+              <h3 class="steps__number">02</h3>
+              <h4 class="steps__title">Choose the frequency</h4>
+              <p class="steps__text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+            </li>
+            <li class="steps__item">
+              <h3 class="steps__number">03</h3>
+              <h4 class="steps__title">Receive and <br> enjoy!</h4>
+              <p class="steps__text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="order">
+      <h2 class="visually-hidden">Ordering coffee</h2>
+      <div class="container">
+        <div class="order-inner">
+          <div class="order-left left">
+            <ol class="left__list">
+
+              <li class="left__item">
+                <a href="#" class="left__link">
+                  <p class="left__text left__text--active"><span class="left__number left__number--active">01</span>Preferences</p>
+                </a>
+              </li>
+
+              <li class="left__item">
+                <a href="#" class="left__link">
+                  <p class="left__text"><span class="left__number">02</span>Bean Type</p>
+                </a>
+              </li>
+
+              <li class="left__item">
+                <a href="#" class="left__link">
+                  <p class="left__text"><span class="left__number">03</span> Quantity</p>
+                </a>
+              </li>
+
+              <li class="left__item">
+                <a href="#" class="left__link">
+                  <p class="left__text"> <span class="left__number">04</span> Grind Option</p>
+                </a>
+              </li>
+
+              <li class="left__item">
+                <a href="#" class="left__link">
+                  <p class="left__text"><span class="left__number">05</span>Deliveries</p>
+                </a>
+              </li>
+
+            </ol>
+          </div>
+
+          <div class="order-right">
+
+            <form action="https://echo.htmlacademy.ru/" method="POST">
+
+              <div class="type">
+                <h3 class="type__title">How do you drink your coffee?</h3>
+                <img class="type__img" src="././images/top.svg" alt="Arrow icon">
+              </div>
+
+              <div class="coffee">
+                <label  class="coffee__label">
+                  <input class="visually-hidden coffee__label-input" type="radio" name="coffee-type" value="Capsule" aria-label="Choose type of coffee">
+                  <div class="coffee__card card">
+                    <h4 class="card__title">Capsule</h4>
+                    <p class="card__text">Compatible with Nespresso systems and similar brewers</p>
+                  </div>
+                </label>
+
+                <label  class="coffee__label">
+                  <input class="visually-hidden coffee__label-input" type="radio" name="coffee-type" value="Filter" aria-label="Choose type of coffee">
+                  <div class="coffee__card card">
+                    <h4 class="card__title">Filter</h4>
+                    <p class="card__text">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                  </div>
+                </label>
+
+                <label  class="coffee__label">
+                  <input class="visually-hidden coffee__label-input" type="radio" name="coffee-type" value="Espresso" aria-label="Choose type of coffee">
+                  <div class="coffee__card card">
+                    <h4 class="card__title">Espresso</h4>
+                    <p class="card__text">Dense and finely ground beans for an intense, flavorful experience</p>
+                  </div>
+                </label>
+              </div>
+
+              <div class="type">
+                <h3 class="type__title">What type of coffee?</h3>
+                <img class="type__img" src="././images/bottom-arrrow.svg" alt="Arrow icon">
+              </div>
+
+              <div class="type">
+                <h3 class="type__title">How much would you like?</h3>
+                <img class="type__img" src="././images/bottom-arrrow.svg" alt="Arrow icon">
+              </div>
+
+              <div class="type">
+                <h3 class="type__title">Want us to grind them?</h3>
+                <img class="type__img" src="././images/bottom-arrrow.svg" alt="Arrow icon">
+              </div>
+
+              <div class="type">
+                <h3 class="type__title">How often should we deliver?</h3>
+                <img class="type__img" src="././images/bottom-arrrow.svg" alt="Arrow icon">
+              </div>
+
+              <div class="summary">
+                <h4 class="summary__title">Order summary</h4>
+                <p class="summary__text">“I drink my coffee using <span class="summary__green">Capsules</span>, with a <span class="summary__green">_____</span> type of bean.<span class="summary__green">_____</span>, sent to me <span class="summary__green">_____</span>.”</p>
+              </div>
+
+              <button type="submit" class="btn">Create my plan!</button>
+
+            </form>
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="footer">
+        <div class="footer-inner">
+
+          <a href="./index.html"><img src="./images/footer-logo.svg" alt="site  logo" class="footer-inner__logo"></a>
+
+          <nav class="footer-inner__navbar nav">
+
+            <ul class="nav__list">
+              <li class="nav__item"><a href="./index.html" class="nav__link footer__link">HOME</a></li>
+              <li class="nav__item"><a href="#" class="nav__link footer__link">ABOUT US</a></li>
+              <li class="nav__item"><a href="#" class="nav__link footer__link">Create your plan</a></li>
+            </ul>
+
+
+          </nav>
+
+        </div>
+
+        <ul class="footer__list">
+          <li class="footer__item"><a class="footer__item__link" href="#"><svg class="footer__icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" /></svg></a> </li>
+            <li class="footer__item"><a class="footer__item__link" href="#"><svg class="footer__icon" width="24" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557Z" /></svg></a></li>
+              <li class="footer__item"><a class="footer__item__link" href="#"><svg class="footer__icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z" /></svg></a></li>
+              </ul>
+
+            </div>
+          </div>
+        </footer>
+
+      </body>
+      </html>
